# PcbTool

./: .gitignore  CMakeLists.txt  README.md  cinstall.py  conanfile.py  install.py  vcpkg.json
src/: CMakeLists.txt  kicad.cpp  kicad.hpp  main.cpp
